Refactoring of Common project